refactor: altered id uint to uuid.UUID (UUIDv4) all models. Refactor repo and service race from use uuid.UUID. Add Comments swagger in controller race.
